[gd_scene load_steps=7 format=3 uid="uid://lh7dfbb2ctdj"]

[ext_resource type="Script" path="res://scripts/lobby_manager.gd" id="1_rx0ub"]
[ext_resource type="Texture2D" uid="uid://c3xr8fplwegd2" path="res://assets/sprites/logo.png" id="2_fvmej"]
[ext_resource type="Texture2D" uid="uid://bxfeshubktxqe" path="res://assets/sprites/logo_blur.png" id="2_pu4ud"]
[ext_resource type="Script" path="res://scripts/lobby_grid_container.gd" id="3_x1d5u"]
[ext_resource type="ButtonGroup" uid="uid://dbuc3qgf0vacc" path="res://assets/button_groups/lobby_create_host_order_button_group.tres" id="5_pywo4"]
[ext_resource type="Script" path="res://scripts/map_shape_container.gd" id="6_8maqe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rx0ub")

[node name="LogoStroke" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fvmej")
expand_mode = 1
stretch_mode = 5

[node name="LogoBlur" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pu4ud")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "search"

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer/HBoxContainer/SearchButton"]

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "refresh"

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer/HBoxContainer/RefreshButton"]

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+ create room"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 13
script = ExtResource("3_x1d5u")

[node name="padding1" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="lock" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "lock
"

[node name="padding2" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="padding3" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label6" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "player1"

[node name="padding4" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "vs"

[node name="padding5" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "player2"

[node name="padding6" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "join"

[node name="padding7" type="Control" parent="VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CreatePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CreatePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CreatePanel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CreatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="CreatePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_next = NodePath("../PasswordLineEdit")

[node name="PasswordLabel" type="Label" parent="CreatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordLineEdit" type="LineEdit" parent="CreatePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_next = NodePath("../HBoxContainer/HostFirstCheckBox")
focus_previous = NodePath("../NameLineEdit")

[node name="HBoxContainer" type="HBoxContainer" parent="CreatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostFirstCheckBox" type="CheckBox" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_next = NodePath("../HostLastCheckBox")
focus_previous = NodePath("../../PasswordLineEdit")
button_pressed = true
button_group = ExtResource("5_pywo4")
text = "red"

[node name="HostLastCheckBox" type="CheckBox" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_next = NodePath("../RandomCheckBox")
focus_previous = NodePath("../HostFirstCheckBox")
button_group = ExtResource("5_pywo4")
text = "blue"

[node name="RandomCheckBox" type="CheckBox" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_next = NodePath("../../MapShapeContainer/HBoxContainer2/MapWidthSpinBox")
focus_previous = NodePath("../HostLastCheckBox")
button_group = ExtResource("5_pywo4")
text = "random"

[node name="MapShapeContainer" type="VBoxContainer" parent="CreatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("6_8maqe")

[node name="MapShapeGridContainer" type="GridContainer" parent="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer"]
layout_mode = 2
columns = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer"]
layout_mode = 2

[node name="MapWidthSpinBox" type="SpinBox" parent="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../MapHeightSpinBox")
focus_previous = NodePath("../../../HBoxContainer/RandomCheckBox")
value = 7.0

[node name="MapHeightSpinBox" type="SpinBox" parent="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../MapSizeResetButton")
focus_previous = NodePath("../MapWidthSpinBox")
value = 7.0

[node name="MapSizeResetButton" type="Button" parent="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_next = NodePath("../../../HBoxContainer3/CancelButton")
focus_previous = NodePath("../MapHeightSpinBox")
text = "reset"

[node name="HBoxContainer3" type="HBoxContainer" parent="CreatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../CreateButton")
focus_previous = NodePath("../../MapShapeContainer/HBoxContainer2/MapSizeResetButton")
text = "cancel"

[node name="CreateButton" type="Button" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../../NameLineEdit")
focus_previous = NodePath("../CancelButton")
text = "create"

[node name="HTTPRequest" type="HTTPRequest" parent="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3/CreateButton"]

[node name="JoinPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="JoinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPanel/MarginContainer"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="JoinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordLineEdit" type="LineEdit" parent="JoinPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CancelButton" type="Button" parent="JoinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "cancel"

[node name="JoinButton" type="Button" parent="JoinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "join"

[node name="HTTPRequest" type="HTTPRequest" parent="JoinPanel/MarginContainer/VBoxContainer/JoinButton"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="request_completed" from="VBoxContainer/HBoxContainer/RefreshButton/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="value_changed" from="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2/MapWidthSpinBox" to="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer" method="_on_map_width_spin_box_value_changed"]
[connection signal="value_changed" from="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2/MapHeightSpinBox" to="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer" method="_on_map_height_spin_box_value_changed"]
[connection signal="pressed" from="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer/HBoxContainer2/MapSizeResetButton" to="CreatePanel/MarginContainer/VBoxContainer/MapShapeContainer" method="_on_map_size_reset_button_pressed"]
[connection signal="pressed" from="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3/CreateButton" to="." method="_on_create_panel_create_button_pressed"]
[connection signal="request_completed" from="CreatePanel/MarginContainer/VBoxContainer/HBoxContainer3/CreateButton/HTTPRequest" to="." method="_on_create_http_request_request_completed"]
[connection signal="pressed" from="JoinPanel/MarginContainer/VBoxContainer/CancelButton" to="." method="_on_join_panel_cancel_button_pressed"]
[connection signal="request_completed" from="JoinPanel/MarginContainer/VBoxContainer/JoinButton/HTTPRequest" to="." method="_on_join_http_request_request_completed"]
